0.6.6/_sources/gallery/dask_nD_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/dask_nD_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_dask_nD_image.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_dask_nD_image.py:


Dask nD image
=============

Display a dask array

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-37



.. image-sg:: /gallery/images/sphx_glr_dask_nD_image_001.png
   :alt: dask nD image
   :srcset: /gallery/images/sphx_glr_dask_nD_image_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    try:
        from dask import array as da
    except ModuleNotFoundError:
        raise ModuleNotFoundError(
            """This example uses a dask array but dask is not
        installed. To install try 'pip install dask'."""
        ) from None

    import numpy as np
    from skimage import data

    import napari

    blobs = da.stack(
        [
            data.binary_blobs(
                length=128, blob_size_fraction=0.05, n_dim=3, volume_fraction=f
            )
            for f in np.linspace(0.05, 0.5, 10)
        ],
        axis=0,
    )
    viewer = napari.Viewer()
    layer = viewer.add_image(blobs.astype(float))

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_dask_nD_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: dask_nD_image.ipynb <dask_nD_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: dask_nD_image.py <dask_nD_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: dask_nD_image.zip <dask_nD_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
